Able to use ES6 and use bot to post message

--- a/package.json
+++ b/package.json
@@ -5,17 +5,25 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start": "babel-watch app.js",
+    "build": "babel app.js --out-dir build"
   },
   "author": "Simon Davis",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.0",
+    "@babel/node": "^7.5.0",
+    "@babel/preset-env": "^7.5.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-watch": "^7.0.0",
     "nodemon": "^1.18.3"
   },
   "dependencies": {
     "@slack/events-api": "^2.2.0",
     "@slack/web-api": "^5.0.1",
+    "babel-polyfill": "^6.26.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.3",
     "mongodb": "^3.1.6",
