--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-watch app.js",
-    "build": "babel app.js --out-dir build"
+    "build": "babel app.js --out-dir build",
+    "heroku-postbuild": "babel src --out-dir dist --copy-files"
   },
   "author": "Simon Davis",
   "license": "ISC",
